[gd_scene load_steps=7 format=3 uid="uid://bboauwaryjfr8"]

[ext_resource type="Script" path="res://game/foes/drone/drone.gd" id="1_0t2op"]
[ext_resource type="Texture2D" uid="uid://m7sdjc34g7ig" path="res://game/foes/drone/prox_drone.png" id="2_8l6wb"]

[sub_resource type="Animation" id="Animation_1rl05"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dvx7r"]
resource_name = "death"

[sub_resource type="Animation" id="Animation_0f6dp"]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_st70q"]
_data = {
"RESET": SubResource("Animation_1rl05"),
"death": SubResource("Animation_dvx7r"),
"hit": SubResource("Animation_0f6dp")
}

[node name="Drone" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_0t2op")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8l6wb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_st70q")
}

[connection signal="damaged" from="." to="." method="_on_damaged"]
[connection signal="destroyed" from="." to="." method="_on_destroyed"]
[connection signal="player_collided" from="." to="." method="_on_player_collided"]
